src/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Borrower_First_Name__c</fullName>
        <label>Borrower First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_Last_Name__c</fullName>
        <label>Borrower Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <label>Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOAN-{00000}</displayFormat>
        <label>Loan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Flow__c</fullName>
        <label>Flow</label>
    </sharingReasons>
</CustomObject>